# Robobase

./: .gitignore  README.md  package.xml  setup.py
knowledge/: README.md
knowledge/Control/: MPC.md  PID.md  卡尔曼滤波.md
knowledge/Modern_Robotics/: Ch01_preview.md  Ch03_Rigid_Body_Motions.md  Ch04_Forward_Kinematics.md  Ch06_Inverse_Kinematics.md  Ch10_Motion_Planning.md
my_ros2_examples/: service_client.py  service_server.py
resource/: my_ros2_examples
ros2/my_ros2_examples/: README.md  package.xml  setup.cfg  setup.py
ros2/my_ros2_examples/launch/: add_two_ints.launch.py  talker_listener.launch.py
ros2/my_ros2_examples/my_ros2_examples/: param_node.py  publisher_node.py  subscriber_node.py
ros2/my_ros2_examples/resource/: my_ros2_examples
soarm101/: .gitignore  README.md
soarm101/notes/: launch_debug_notes.txt  moveit_rviz.md
soarm101/pi_tune/: README.md
soarm101/tf/: frames_2025-10-08_22.57.18.gv
src/my_ros2_examples/my_ros2_examples/: param_node.py  publisher_node.py  service_client.py  service_server.py  subscriber_node.py
机器人学/: README.md
机器人学/Modern_Robotics/: Ch02_Configuration_Space.md  Ch04_Forward_Kinematics.md  Ch05_Velocity_Kinematics_and_Statics.md  Ch06_Inverse_Kinematics.md  Ch07_Closed_Chains.md  Ch08_Dynamics_Open_Chains.md  Ch09_Trajectory_Generation.md  Ch10_Motion_Planning.md  Ch11_Robot_Control.md  Ch12_Grasping_and_Manipulation.md  Ch13_Wheeled_Mobile_Robots.md
