[develop]
script_dir=$base/lib/my_ros2_examples

[install]
install_scripts=$base/lib/my_ros2_examples

[options.entry_points]
console_scripts =
    talker = my_ros2_examples.publisher_node:main
    listener = my_ros2_examples.subscriber_node:main
    add_server = my_ros2_examples.service_server:main
    add_client = my_ros2_examples.service_client:main
    param_node = my_ros2_examples.param_node:main


